# whisper.cpp

./: Makefile
examples/stream/: stream.cpp
examples/zego-stream/: convert_pcm.py  play_pcm.py  stream.cpp
examples/zego-stream-rpc/: CMakeLists.txt  stream.cpp  test.pcm  transcribe.grpc.pb.cc  transcribe.grpc.pb.h  transcribe.pb.cc  transcribe.pb.h  transcribe.proto  zego-handle.cpp
examples/zego-stream-rpc/include/: GetAudioApi.h  GetAudioDefines.h  ZegoExpressErrorCode.h
examples/zego-stream-rpc/include/internal/: ZegoInternalEngineImpl.hpp
examples/zego-stream-rpc/include/internal/include/: zego-express-defines.h  zego-express-engine.h  zego-express-media-data-publisher.h  zego-express-mediaplayer.h  zego-express-player.h  zego-express-screen-capture.h
examples/zego-stream/include/internal/: ZegoInternalBridge.h  ZegoInternalMediaPlayer.hpp
examples/zego-stream/include/internal/include/: zego-express-copyrighted-music.h  zego-express-errcode.h  zego-express-im.h
examples/zego-stream2/: CMakeLists.txt  params.h  stream.cpp  zego-handle.cpp  zego-handle.h
examples/zego-stream2/include/: ZegoExpressDefines.h  ZegoExpressEventHandler.h  ZegoExpressInterface.h
examples/zego-stream2/include/internal/: ZegoInternalBase.h  ZegoInternalCallbackImpl.hpp  ZegoInternalCopyrightedMusic.hpp  ZegoInternalScreenCaptureSource.hpp
examples/zego-stream2/include/internal/include/: zego-express-publisher.h  zego-express-room.h  zego-express-utilities.h
stream.dSYM/Contents/Resources/DWARF/: stream
